feat: update api types
Closes #581
